[package]
name = "tinybit"
version = "0.2.0"
authors = ["Togglebit <me@togglebit.io>"]
edition = "2018"
description = "terminal drawing / game library"
license-file = "LICENSE"
repository = "https://github.com/togglebyte/tinybit"
keywords = ["terminal", "drawing"]

[dependencies]
crossterm = { version = "0.21.0", features = ["serde"] }
serde_json = "1.0.62"
serde = "1.0.123"
