[package]
name = "tinybit"
version = "0.2.0"
authors = ["Togglebit <me@togglebit.io>"]
edition = "2018"
description = "terminal drawing / game library"
license-file = "LICENSE"
repository = "https://github.com/togglebyte/tinybit"
keywords = ["terminal", "drawing"]

[features]
default = []
derive = ["serde", "serde_json", "crossterm/serde"]

[dependencies]
crossterm = { version = "0.21.0" }
serde_json = { version = "1.0.62", optional = true }
serde = { version = "1.0.123", optional = true }
